# LeagueOfNations

./: .gitignore  PRIVACY.md  README.md  TERMS_AND_CONDITIONS.md  bot.py  db.sqlite3  defaults.json  defaults.py  lon.py  pyproject.toml  requirements.txt
.github/workflows/: code-cov.yml  tests.yml
.github/workflows  /: tests.yml
cogs/: economy.py  start.py
host/: __init__.py  aid.py  bank.py  base_models.py  base_types.py  currency.py  defaults.py  gameplay_settings.py  government.py  interior.py  ministry.py  models.py  nation.py  notifier.py  player.py  trade.py  types.py  units.py  ureg.py
host/alliance/: __init__.py  bank.py  models.py  types.py
host/nation/: __init__.py  bank.py  foreign.py  government.py  improvements.py  interior.py  meta.py  ministry.py  models.py  trade.py  types.py
host/nation/types/: __init__.py  basic.py  boosts.py  government.py  improvements.py  interior.py  ministries.py  resources.py  transactions.py
objects/: bonus_resources.json  governments.json  improvements.json  infrastructure.json  resources.json
settings/: defaults.json  gameplay_settings.json
templates/: aid.xml  economy.xml  errors.j2  government.xml  improvement.xml  infrastructure.xml  land.xml  lookup.xml  mechanisms.j2  mechanisms.xml  notifications.xml  search.xml  start.xml  statistics.xml  technology.xml  trade.xml  transactions.j2
templates/trade/: errors.xml  macros.xml  offer.xml  request.xml  select.xml  trade.xml  view.xml
tests/: conftest.py  test_utils.py
tests/objects/: bonus_resources.json  resources.json
tests/unit/: test_bank.py  test_nation.py  test_trade.py
view/: check.py  lookup.py  notifications.py
view/cogs/: aid.py  custom_jinja2.py  economy.py  government.py  search.py  start.py  trade.py
