[tool.poetry]
name = "leagueofnations"
version = "0.1.0"
description = "Nation Simulator game"
authors = ["YousefEZ <45167695+YousefEZ@users.noreply.github.com>"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord-qalib = "^2.5.0"
babel = "2.14"
SQLAlchemy = "^2.0.23"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
asyncio = "^3.4.3"
Jinja2 = "^3.1.2"
pyright = "^1.1.375"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"
pylint = "^3.2.6"
ruff = "^0.6.2"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
